<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:background="@drawable/infocard_border"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView_title"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="0"
        android:background="#009a9a"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/title"
        android:textColor="#d9e5f3"
        android:textSize="20dp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textView_deactive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="#009a9a"
        android:padding="5dp"
        android:text="@string/stop_show_ad"
        android:textColor="#d9e5f3"
        android:textStyle="bold"
        android:visibility="gone" />

    <TextView
        android:id="@+id/textView_is_deactive"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#009a9a"
        android:padding="2dp"
        android:text="@string/archived"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="#d9e5f3"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_weight="0"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="20dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView_ad"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="right"
                android:layout_marginLeft="5dp"
                android:src="@drawable/noimage" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/price" />

            <TextView
                android:id="@+id/textview_price"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="New Text" />

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@drawable/infocard_border">

            <TextView
                android:id="@+id/textView_city"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignEnd="@+id/textview_date"
                android:layout_alignRight="@+id/textview_date"
                android:layout_alignTop="@+id/textView4"
                android:text="@string/City" />

            <TextView
                android:id="@+id/textView_user"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView_user_label"
                android:layout_alignBottom="@+id/textView_user_label"
                android:layout_alignEnd="@+id/textview_date"
                android:layout_alignRight="@+id/textview_date"
                android:text="Fady Khalowf" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView_category"
                android:layout_marginBottom="20dp"
                android:layout_marginTop="10dp"
                android:text="@string/city"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_user_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:text="@string/User"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView_category"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:layout_column="26"
                android:layout_row="0"
                android:text="@string/category"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:text="@string/date"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textview_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBaseline="@+id/textView8"
                android:layout_alignBottom="@+id/textView8"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="26dp"
                android:layout_marginRight="26dp"
                android:text="1-1-2011" />

            <TextView
                android:id="@+id/textViewCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/textview_date"
                android:layout_alignParentTop="true"
                android:layout_alignStart="@+id/textview_date"
                android:text="@string/category" />


        </RelativeLayout>


    </LinearLayout>
</LinearLayout>