<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    tools:context="com.example.sami.ads.AdsActivity">


    <LinearLayout
        android:id="@+id/layout_wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="visible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:background="@drawable/infocard_border"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:padding="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/City"
                    android:textSize="16sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/textView_city"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_arrow_down"
                    android:gravity="center"
                    android:text="@string/All" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Category"
                    android:textSize="16sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/text_view_category"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_arrow_down"
                    android:gravity="center"
                    android:text="@string/all_categories" />
            </LinearLayout>

            <View style="@style/Divider" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/Sort"
                    android:textSize="16sp"
                    android:textStyle="normal|bold" />

                <TextView
                    android:id="@+id/text_view_filter"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableLeft="@drawable/ic_action_arrow_down"
                    android:gravity="center"
                    android:text="@string/recent" />
            </LinearLayout>

        </LinearLayout>

        <ListView
            android:id="@+id/listView_ads"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:divider="@android:color/transparent"
            android:dividerHeight="15dp"
            tools:listitem="@layout/ad_item"></ListView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar_ads_activity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_gravity="center"
        android:visibility="visible" />
</RelativeLayout>