<?xml version="1.0" encoding="utf-8"?>


<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradiant"
    android:orientation="vertical"
    tools:context="com.example.sami.ads.CategoryActivity">

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/RecycleViewRecentAds"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                tools:listitem="@layout/recent_ad_item" />

            <TextView
                android:id="@+id/button_all_ads"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/show_all_ads"
                android:textColor="#d9e5f3"
                android:visibility="visible" />

            <ListView
                android:id="@+id/listView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="10dp"
                android:divider="@android:color/transparent"
                android:dividerHeight="15dp"
                tools:listitem="@layout/category_item" />
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/button_bar_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:visibility="visible">

        <Button
            android:id="@+id/button_sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#009a9a"
            android:drawableLeft="@drawable/ic_action_user"
            android:text="@string/title_activity_signin"
            android:textColor="#d9e5f3"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/black12" />

        <Button
            android:id="@+id/button_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#009a9a"
            android:drawableRight="@drawable/ic_action_name2"
            android:text="@string/new_account"
            android:textColor="#d9e5f3"
            android:textStyle="bold" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_bar_auth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="horizontal"
        android:visibility="gone">

        <Button
            android:id="@+id/button_logout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#009a9a"
            android:drawableLeft="@drawable/ic_action_name"
            android:text="@string/sign_out"
            android:textColor="#d9e5f3"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/black12" />

        <Button
            android:id="@+id/button_user_ad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#009a9a"
            android:text="@string/my_ads"
            android:textColor="#d9e5f3"
            android:textStyle="bold" />

        <View
            android:layout_width="1dp"
            android:layout_height="fill_parent"
            android:layout_marginBottom="7dp"
            android:layout_marginTop="7dp"
            android:background="@color/black12" />

        <Button
            android:id="@+id/button_new_ad"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:background="#009a9a"
            android:drawableRight="@drawable/ic_action_add"
            android:text="@string/new_ads"
            android:textColor="#d9e5f3"
            android:textStyle="bold" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" />

</RelativeLayout>
